fix: notification on mobile fix

--- a/src/components/simon/Simon.scss
+++ b/src/components/simon/Simon.scss
@@ -24,6 +24,10 @@
       background: #dadada;
     }
   }
+
+  .textGame {
+    margin-top: 20px;
+  }
 }
 
 .button {
